--- a/www/bootstrap.css
+++ b/www/bootstrap.css
@@ -6934,3 +6934,16 @@ a.list-group-item-danger.active:focus {
 .popover {
   color: #333333;
 }
+
+.js-irs-2 .irs-bar {
+border-top-color: #d01010;
+border-bottom-color: #d01010;
+} 
+
+.js-irs-2 .irs-bar-edge {
+border-color: #d01010;
+}
+
+.js-irs-2 .irs-single, .js-irs-2 .irs-bar-edge, .js-irs-2 .irs-bar {
+background: #a00;
+}
